# unitree_go1

./: ..pgm  ..yaml  .gitignore  README.md  basic_install_files.txt  cyclonedds.xml  frames_2024-10-18_10.59.54.gv  frames_2024-10-18_11.33.13.gv  frames_2024-10-18_11.52.35.gv  frames_2024-10-18_11.52.48.gv  frames_2024-10-18_11.58.44.gv  frames_2024-10-18_11.59.24.gv  frames_2024-10-18_12.02.41.gv  frames_2024-11-08_13.32.56.gv  frames_2024-11-12_16.14.46.gv  frames_2024-11-13_16.36.21.gv  frames_2024-11-15_12.55.43.gv  frames_2024-11-15_13.17.36.gv  frames_2024-11-15_13.28.36.gv  frames_2024-11-27_12.56.11.gv  frames_2024-11-27_13.24.11.gv  frames_2024-11-27_13.28.11.gv  frames_2024-11-28_13.48.05.gv  os-122139000982-metadata.json  tmp.rviz
.cache/mesa_shader_cache/: index
.local/share/: recently-used.xbel
.rviz2/: persistent_settings
docker/: .bashrc  Dockerfile  docker_build.sh  docker_run.sh  entrypoint.sh
docker/config/mini-pc/: cyclonedds.xml
go1_ros2/src/champ/champ_bringup/launch/: bringup.launch.py
go1_ros2/src/go1_config/: CMakeLists.txt  package.xml
go1_ros2/src/go1_config/config/: ros_control.yaml
go1_ros2/src/go1_config/config/gait/: gait.yaml
go1_ros2/src/go1_config/config/joints/: joints.yaml
go1_ros2/src/go1_config/config/links/: links.yaml
go1_ros2/src/go1_config/include/: gait_config.h
go1_ros2/src/go1_config/launch/: bringup.launch.py  gazebo.launch.py
go1_ros2/src/go1_description/: CMakeLists.txt  package.xml
go1_ros2/src/go1_description/config/: ros_control.yaml
go1_ros2/src/go1_description/launch/: check_joint.rviz  go1_rviz.launch.py
go1_ros2/src/go1_description/urdf/: go1.urdf
go1_ros2/src/go1_description/xacro/: depthCamera.xacro  gazebo.xacro  leg.xacro  robot.xacro
go1_ros2/src/unitree_gazebo/: CMakeLists.txt  package.xml
go1_ros2/src/unitree_gazebo/config/: ros_conrol.yaml
go1_ros2/src/unitree_gazebo/launch/: normal.launch.py
go1_ros2/src/unitree_gazebo/plugin/: draw_force_plugin.cc
go1_ros2/src/unitree_gazebo/worlds/: earth.world
go1_ros2/src/unitree_legged_msgs/: CMakeLists.txt  package.xml
go1_ros2/src/unitree_legged_msgs/msg/: HighCmd.msg  HighState.msg  LowState.msg  MotorState.msg
go1_ros2/src/unitree_legged_msgs/scripts/: test_publisher.py  test_subscriber.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/champ/share/champ/: local_setup.sh  package.sh
install/champ_base/lib/champ_base/: state_estimation_node
install/champ_base/share/champ_base/: package.sh
install/champ_bringup/share/champ_bringup/: package.sh
install/champ_config/share/champ_config/: local_setup.sh  package.sh
install/champ_description/share/champ_description/: package.sh
install/champ_gazebo/lib/champ_gazebo/: contact_sensor
install/champ_gazebo/share/champ_gazebo/: local_setup.sh  package.sh
install/champ_gazebo/share/champ_gazebo/launch/: gazebo.launch.py
install/champ_msgs/share/champ_msgs/: package.sh
install/champ_navigation/share/champ_navigation/: local_setup.sh  package.sh
install/champ_teleop/share/champ_teleop/: local_setup.sh  package.sh
install/go2_config/share/go2_config/: local_setup.sh  package.sh
install/go2_config/share/go2_config/launch/: gazebo.launch.py
install/go2_description/share/go2_description/: local_setup.sh  package.sh
install/go2_description/share/go2_description/urdf/: go2_description.urdf
install/go2_description/share/go2_description/xacro/: depthCamera.xacro  gazebo.xacro  leg.xacro  robot.xacro  ultraSound.xacro
log/: latest_build
real/: frames_2024-12-03_12.33.17.gv  frames_2024-12-03_16.16.49.gv  frames_2024-12-03_16.18.00.gv  frames_2024-12-05_15.14.42.gv  frames_2024-12-05_15.16.09.gv  frames_2024-12-12_10.25.17.gv  frames_2024-12-12_10.43.36.gv  frames_2024-12-12_11.11.21.gv  frames_2024-12-12_11.15.02.gv  frames_2024-12-12_11.15.49.gv  os-122139000982-metadata.json
real/src/scripts/: init_ouster_connection.sh
real/src/unitree_inspection/unitree_inspection/config/: environment_params.yaml
real/src/unitree_inspection/unitree_ocr/launch/: text_detection_subscriber.launch.py
real/src/unitree_nav/unitree_nav/config/: nav2_params.yaml
real/src/unitree_nav/unitree_nav/launch/: mapping.launch.py  ouster.launch.py  ouster_sensor.launch.py  ouster_slam.launch.py  realsense.launch.py  rslidar_robosense.launch.py  unitree_nav_only_slam.launch.py
real/src/unitree_ros2/go1_description/xacro/: _d435.urdf.xacro  lidar.xacro  robot.xacro
sim/: frames_2024-11-29_16.59.46.gv  frames_2024-11-29_17.03.14.gv  frames_2024-11-29_17.09.10.gv  os-122139000982-metadata.json
sim/unitree-go2-ros2/champ/champ_bringup/launch/: bringup.launch.py
sim/unitree-go2-ros2/robots/configs/go1_config/: CMakeLists.txt  package.xml
sim/unitree-go2-ros2/robots/descriptions/go1_description/: CMakeLists.txt
src/unitree_ros2_sim/go1_sim/go1_description/config/: nav2_params.yaml
src/unitree_ros2_sim/go1_sim/go1_description/xacro/: _d435i.urdf.xacro  const.xacro  depthCamera.xacro  gazebo.xacro  lidar.xacro  robot.xacro
src/unitree_ros2_sim/go1_sim/go1_gazebo/: CMakeLists.txt  package.xml
src/unitree_ros2_sim/go1_sim/go1_gazebo/launch/: controllers_go1.launch.py  spawn_go1.launch.py  spawn_go1_with_odom.launch.py  spawn_go1_with_odom_slam.launch.py  spawn_go1_with_slam.launch.py
src/unitree_ros2_sim/go1_sim/go1_gazebo/plugin/: foot_contact_plugin.cc
src/unitree_ros2_sim/go1_sim/go1_gazebo/worlds/: complete.world  hall.world
src/unitree_ros2_sim/go1_sim/go1_gazebo/worlds/BIM_Files/: CMS_Hall_02.stl
src/unitree_ros2_sim/go1_sim/go1_gazebo/worlds/building_editor_models/complete/: model.sdf
src/unitree_ros2_sim/go1_sim/go1_gazebo/worlds/building_editor_models/hall/: model.sdf
src/unitree_ros2_sim/go1_sim/go1_navigation/params/: nav2_params.yaml
src/unitree_ros2_sim/realsense_gazebo_plugin/: CMakeLists.txt
unitree-go2-ros2/champ/champ_bringup/launch/: bringup.launch.py
unitree-go2-ros2/ouster-ros/ouster-ros/config/: driver_params.yaml
unitree-go2-ros2/robots/descriptions/go1_description/: package.xml
(+44 files in other folders)
