<?xml version="1.0"?>
<package format="3">
    <name>unitree_gazebo</name>
    <version>0.0.0</version>
    <description>The unitree_gazebo package. It can start a Gazebo simulation</description>

    <maintainer email="petropoulakispanagiotis@gmail.com">unitree</maintainer>
    <license>Apache-2.0</license>

    <!-- Build tool dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Build dependencies -->
    <build_depend>rclcpp</build_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>joint_state_broadcaster</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>unitree_legged_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <!-- Dependencies for use at runtime -->
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>unitree_legged_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <export>
        <!-- Gazebo plugin path -->
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
        <build_type>ament_cmake</build_type>
    </export>
</package>
