<?xml version="1.0"?>
<package format="3">
    <name>unitree_gazebo</name>
    <version>0.1.0</version>
    <description>The unitree_gazebo package. It can start a Gazebo simulation</description>

    <maintainer email="petropoulakispanagiotis@gmail.com">unitree</maintainer>
    <license>Apache-2.0</license>

    <!-- Build tool dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <build_depend>launch_ros</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    
    <depend>rclcpp</depend>
    <depend>champ</depend>
    <depend>champ_msgs</depend>
    <depend>unitree_legged_msgs</depend>
    <depend>robot_state_publisher</depend>
    <depend>joint_state_broadcaster</depend>
    <depend>controller_manager</depend>
    
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>
    <exec_depend>gazebo_plugins</exec_depend>
    <exec_depend>ros2_controllers</exec_depend>
    <exec_depend>gazebo_ros2_control</exec_depend>
    <exec_depend>ros2_control</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>ros2_controllers</exec_depend>
    
    <export>
        <!-- Gazebo plugin path -->
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
        <build_type>ament_cmake</build_type>
    </export>
</package>
